basic functionality with some css

--- a/thinkful-tube.html
+++ b/thinkful-tube.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <title>Thinkful Tube</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quattrocento' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Gentium+Basic:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <h1> Thinkful Tube </h1>
 <form id="search-term">
     <input id="query" type="text">
-    <input type="submit" value="Submit">
+    <input id="submit" type="submit" value="Submit">
 </form>
 <div id="content">
 </div>
